# volatility-estimator

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
report/: report.qmd
scripts/: base_compute_volatility.py  base_process.py  base_process_prices.py  incremental_process.py
tests/: test_cleaner.py
volatility_estimator/: cleaner.py  config.py  estimator.py  logger.py  process.py  tmp.ipynb  volatility_estimator.py
