[tool.poetry]
name = "volatility-estimator"
version = "0.1.0"
description = "Simple library for historical volatility estimation."
authors = ["Ben Dowling <ben.dowling@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
