[tool.poetry]
name = "volatility-estimator"
version = "0.1.0"
description = "Simple library for historical volatility estimation."
authors = ["Ben Dowling <ben.dowling@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.5.4"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

# E - pycodestyle error
# F - pyflakes
# I - isort
# N - pep8-naming
# W - pycodestyle warn
# UP - pyupgrade
# TODO: D - pydocstyle
select = ["E", "F", "I", "N", "W", "UP"]

# N805 - invalid-first-argument-name-for-method
ignore = ["N805"]

line-length = 100
